fix: resolve review findings for security and deletion